...
        android:textColor="#A55353"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="350dp"
        android:layout_height="92dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="499dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsActivityUsernameDisplayView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SettingsActivityEditInputTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="56dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ActivitySaveUsernameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="299dp"
...
