...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AllActivitiesTaskDetailActivities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityTaskRecyclerView" />

    <Button
        android:id="@+id/mainActivityAllTask"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="90dp"
...
        app:layout_constraintEnd_toStartOf="@+id/mainActivityAllTask"
        app:layout_constraintStart_toEndOf="@+id/MainActivityAddTask"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityTaskRecyclerView"
        app:layout_constraintVertical_bias="0.716" />

    <ImageButton
        android:id="@+id/SetUsernameActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/AllActivitiesSetUsernameImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/MainActivityTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/MainActivityUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="11dp"
...
