...
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="469dp"
        android:text="@string/AllActivitiesAllTasksTitle"
        android:textColor="#2A4205"
        app:layout_constraintBottom_toTopOf="@+id/AllTasksShowToastButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AllTasksToastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="470dp"
        android:layout_marginBottom="160dp"
        android:text="@string/AllActivitiesButton"
...
