...
    <string name="app_name">taskmaster</string>
    <string name="product_name">Product Name</string>
    <string name="ProductNameInput">Product Name input</string>
    <string name="ProductNameInput2">Product Name Input</string>
    <string name="MainActivityMyTasks">My Tasks</string>
    <string name="MainActivityAddTask">Add Task</string>
    <string name="MainActivityAllTasks">All Tasks</string>
    <string name="CreateActivityTaskTile">Add Task</string>
    <string name="CreateActivityTaskInputHint">My Task</string>
    <string name="CreateActivityTaskDescriptionLabel">Task Description</string>
    <string name="AllActivitiesAllTasksTitle">All Tasks</string>
    <string name="CreateTaskActivityButton">Submit Task</string>
    <string name="AllActivitiesButton">Show Toast</string>
    <string name="AllTasksButton2">Show Toast 2</string>
    <string name="AllActivitiesCounter">"Counter: "</string>
    <string name="title_activity_task_detail_page">TaskDetailPage</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

...
